10429 loader: dereferencing type-punned pointer will break strict-aliasing rules Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@joyent.com>